<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CriminalIntent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_title_hint_text">Please enter Crime title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_text">Solved</string>
    <string name="crime_title">Crimes</string>
    <string name="crime_date_title">Date of Crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">If you see something, say something</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="choose_suspect">Choose Suspect</string>
    <string name="send_report">Send Report</string>
    <string name="crime_report">%1$s !
        %2$s.</string>
   	<string name="crime_report_solved">The Crime is Solved</string>
   	<string name="crime_report_unsolved">The Crime is not solved</string>
   	<string name="crime_suspect">The crime suspect is %s.</string>
   	<string name="crime_no_suspect">The crime suspect has no suspect till now</string>

</resources>
